# rapid_shooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  editor.sh  game.sh  imgui.ini  impel_down.json
.cache/clangd/index/: FA6FreeSolidFontData.h.55C4EF1E93F21BE1.idx  IconsFontAwesome6.h.B1FAB9229FAE0E2C.idx  cJSON.cc.A75D2FDE4AB6CDD4.idx  cJSON.h.4E7AA38F79A66FBA.idx  camera.cc.2DBAA4A829B99C13.idx  camera.h.B63F35349BF12EA3.idx  collision.cc.CF31E057CAF786B8.idx  collision.h.A0623DB1FD8BF742.idx  common.cc.30D1D618E165AB97.idx  common.h.65BFB34AAC1C645B.idx  config.h.01885884D4E69DDE.idx  draw.cc.6B49F60AC29A1AF3.idx  draw.h.36DFA28141374414.idx  editor_entities.h.7D0CFC97744E66A1.idx  enemy.cc.D73577D9952E2ACB.idx  enemy.h.C8CC23401E933D8A.idx  entities.cc.BF7301D16D7C72FF.idx  entities.h.2EC4D8407257A18E.idx  entity_loader.h.4574115F8B27A347.idx  game.cc.215FFBA01974D341.idx  game.h.4A4A2253F25499A9.idx  game_state.h.34AE15E6B7883F50.idx  gate.h.0F5BE28EC7514F96.idx  imconfig.h.9E1E63FB8E84C24B.idx  imgui.cpp.3B4752635B0EE651.idx  imgui.h.256A507CE147B9BC.idx  imgui_draw.cpp.38C53D6DC9D009D1.idx  imgui_impl_raylib.h.A5D7C185E92E1338.idx  imgui_internal.h.AA5A6BD381231E0C.idx  imgui_tables.cpp.2A2B47BFB6DD4C31.idx  imgui_widgets.cpp.12204BB934B8E826.idx  imstb_rectpack.h.EF3513D6C8CCAC15.idx  imstb_textedit.h.C01965D640EBEC11.idx  imstb_truetype.h.09E14824C8B472A6.idx  input_manager.h.79C0D7F7D040F285.idx  inventory.cc.F1F5DBABF5B5D149.idx  inventory.h.C057FA2AE56A81C4.idx  item.cc.CF959E210AC13785.idx  item.h.89A76DD882778BB6.idx  item_drop.cc.BD483139F85DE70C.idx  (+29 more)
configs/: game_config.json
include/: common.h  config.h  engine.h  entity_loader.h  game.h  game_config.h  game_state.h  game_world.h  hud.h  input_handler.h  input_manager.h  level.h  level_editor.h  projectiles.h  save.h
src/: collision.cc  common.cc  draw.cc  editor_main.cc  engine.cc  game.cc  game_config.cc  game_main.cc  game_world.cc  hud.cc  input_handler.cc  level.cc  level_editor.cc  level_editor_utils.cc  main.cc  player.cc  projectiles.cc  save.cc
tests/: simple_test.h  test_main.cc
